-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.6.9
=====
- orm
  - Fixed bug whereby the source clause
    used by query.join() would be inconsistent
    if against a column expression that combined
    multiple entities together.  [ticket:2197]

  - Fixed bug whereby if a mapped class
    redefined __hash__() or __eq__() to something
    non-standard, which is a supported use case
    as SQLA should never consult these,
    the methods would be consulted if the class
    was part of a "composite" (i.e. non-single-entity)
    result set.  [ticket:2215]

  - Fixed subtle bug that caused SQL to blow
    up if: column_property() against subquery +
    joinedload + LIMIT + order by the column
    property() occurred.  [ticket:2188].

  - The join condition produced by with_parent
    as well as when using a "dynamic" relationship
    against a parent will generate unique
    bindparams, rather than incorrectly repeating 
    the same bindparam.  [ticket:2207].

  - Repaired the "no statement condition" 
    assertion in Query which would attempt
    to raise if a generative method were called
    after from_statement() were called.
    [ticket:2199].

- sql
  - Fixed two subtle bugs involving column 
    correspondence in a selectable,
    one with the same labeled subquery repeated, the other
    when the label has been "grouped" and 
    loses itself.  Affects [ticket:2188].

  - Fixed bug whereby "warn on unicode" flag
    would get set for the String type
    when used with certain dialects.  This
    bug is not in 0.7.

- schema
  - Added an informative error message when 
    ForeignKeyConstraint refers to a column name in 
    the parent that is not found.

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].

  - repaired the oracle.RAW type which did not
    generate the correct DDL.  [ticket:2220]

0.6.8
=====
- orm
  - Calling query.get() against a column-based entity is